tests/baselines/reference/asyncGenerators.objectLiteralMethod.6.es6.errors.txt
tests/cases/conformance/asyncGenerators/es6/objectLiteralMethods/asyncGenerators.objectLiteralMethod.6.es6.ts(2,19): error TS2524: 'await' expressions cannot be used in a parameter initializer.


==== tests/cases/conformance/asyncGenerators/es6/objectLiteralMethods/asyncGenerators.objectLiteralMethod.6.es6.ts (1 errors) ====
    const x = {
        async * f(a = await 1) {}
                      ~~~~~~~
!!! error TS2524: 'await' expressions cannot be used in a parameter initializer.
    }